--- a/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
@@ -2,8 +2,6 @@
 
 @section Scripts{
     <script>
-        var dados = JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"'));
-
-        montaGrafico('pie', dados, document.getElementById("graficoPizza").getContext("2d"), $("#varPesquisada").val());
+        montaGrafico('pie', JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"')), document.getElementById("graficoPizza").getContext("2d"), $("#varPesquisada").val());
     </script>
 }
