--- a/SoftwareEstatistica.Web/Views/Quantitativas/GraficoContinuas.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/GraficoContinuas.cshtml
@@ -2,8 +2,7 @@
 
 @section Scripts{
     <script>
-        var dadosGrafico = montaInformacoesGrafico(JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"')));
-        
-        montaGrafico("bar", dadosGrafico, document.getElementById("graficoBarrasEspacadas").getContext("2d"), $("#varPesquisada").val());
+        montaGrafico("bar", montaInformacoesGrafico(JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"'))), 
+        document.getElementById("graficoBarrasEspacadas").getContext("2d"), $("#varPesquisada").val());
     </script>
 }
