--- a/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
+++ b/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="~/lib/materialize/js/materialize.js"></script>
-    <script type="text/javascript" src="~/js/loading.js"></script>
+    <script type="text/javascript" src="~/js/site.js"></script>
     <script type="text/javascript" src="~/js/funcoes.js"></script>
     
     @RenderBody()
