inserindo coeficiente de variacao

--- a/SoftwareEstatistica.Web/Views/Quantitativas/MediaModaMediana.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/MediaModaMediana.cshtml
@@ -2,6 +2,7 @@
     <h5 class="left">Dados</h5>
     <table class="tabela highlight" id="dadosMediaModaMediana" style="margin-bottom: 30px">
         <thead>
+            <td>Coeficiente de Variação</td>
             <td>Desvio Padrão</td>
             <td>Media</td>
             <td>Mediana</td>
@@ -24,6 +25,8 @@
 
         $("#dadosMediaModaMediana tbody").append($("<tr>",{
                                                      html: [$("<td>",{
+                                                                html: [objeto.CoefiecienteDeVariacao]
+                                                            }),$("<td>",{
                                                                 html: [objeto.DesvioPadrao]
                                                             }),
                                                             $("<td>",{
