--- a/SoftwareEstatistica.Web/Views/Quantitativas/MediaModaMediana.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/MediaModaMediana.cshtml
@@ -2,7 +2,7 @@
     <h5 class="left">Dados</h5>
     <table class="tabela highlight" id="dadosMediaModaMediana" style="margin-bottom: 30px">
         <thead>
-            <td>Coeficiente de Variação</td>
+            <td>C.V.</td>
             <td>Desvio Padrão</td>
             <td>Media</td>
             <td>Mediana</td>
@@ -25,7 +25,7 @@
 
         $("#dadosMediaModaMediana tbody").append($("<tr>",{
                                                      html: [$("<td>",{
-                                                                html: [objeto.CoefiecienteDeVariacao]
+                                                                html: [objeto.CoeficienteDeVariacao]
                                                             }),$("<td>",{
                                                                 html: [objeto.DesvioPadrao]
                                                             }),
