modifição do front-end

--- a/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
@@ -1,7 +1,6 @@
-<canvas id="graficoPizza"></canvas>
+<canvas id="graficoPizza" class="grafico"></canvas>
 
-@section Scripts{
-    <script>
-        montaGrafico("pie", JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"')), document.getElementById("graficoPizza").getContext("2d"), $("#varPesquisada").val());
-    </script>
-}
+
+<script>
+    montaGrafico("pie", JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"')), document.getElementById("graficoPizza").getContext("2d"), $("#varPesquisada").val());
+</script>
