--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Tabela.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Tabela.cshtml
@@ -1,19 +1,24 @@
 @{ Layout = null; }
 
-<div class="col s10 offset-s1">
-    <h5 class="left">Tabela</h5>
-    <table class="tabela highlight" id="dadosOrdenados" style="margin-bottom: 30px">
-        <thead>
-            <tr>
-                <td>VaP</td>
-                <td>Fr</td>
-                <td>Fr%</td>
-                <td>FrA</td>
-                <td>FrA%</td>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+<div class="frequencia">
+    <h5>Tabela</h5>
+
+    <div class="scroll">
+
+        <table class="tabela highlight" id="dadosOrdenados" style="margin-bottom: 30px">
+            <thead>
+                <tr>
+                    <td>VaP</td>
+                    <td>Fr</td>
+                    <td>Fr%</td>
+                    <td>FrA</td>
+                    <td>FrA%</td>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+    
 </div>   
 
     <script>
