--- a/SoftwareEstatistica.Web/Views/Quantitativas/Grafico.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/Grafico.cshtml
@@ -1,8 +1,7 @@
-<canvas id="graficoBarrasEspacadas"></canvas>
+<canvas id="graficoBarrasEspacadas" class="grafico"></canvas>
 
-@section Scripts{
-    <script>
-        montaGrafico("bar", montaInformacoesGrafico(JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"'))), 
-        document.getElementById("graficoBarrasEspacadas").getContext("2d"), $("#varPesquisada").val());
-    </script>
-}
+
+<script>
+    montaGrafico("bar", montaInformacoesGrafico(JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"'))), 
+    document.getElementById("graficoBarrasEspacadas").getContext("2d"), $("#varPesquisada").val());
+</script>
