--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
   </div>
 </div>
 
-<ul id="slide-out" class="sidenav sidenav-fixed blue-grey darken-3">
+<ul id="slide-out" class="sidenav blue-grey darken-3">
   <li class="no-padding">
     <ul class="collapsible collapsible-accordion">
       <li>
@@ -72,10 +72,12 @@
   </li>
   <li><a href="#!" id="varQualitativa" class="white-text">Variaveis Qualitativas</a></li>
 </ul>
-<a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-
+<div class="botoes-navegacao">
+  <a href="#" data-target="slide-out" class="sidenav-trigger menu"><i class="material-icons">menu</i></a>
+  <a href="#" id="retornar" class="retorno" style="display:none;"><i class="material-icons small">keyboard_backspace</i></a>
+</div>
 <div id="corpoSite" class="height">
-  <div class="center alinhaVerticalmente">
+  <div class="center">
     <i class="large material-icons" style="color: #37474f; font-size: 40rem;">trending_up</i>
   </div>
 </div>
