--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
@@ -1,20 +1,16 @@
-<div class="row center">
+<div id="fomulario-dados" class="row center">
     <form class="col s8 offset-s2">
-        <i  class="material-icons right tooltipped" 
-            data-tooltip="Ajuda" 
-            data-position="left" 
-            onclick="ExibeAjuda()" 
-            style="cursor:pointer; margin-top: 10px; margin-right: 10px">help</i>
+        <i class="material-icons right tooltipped" data-tooltip="Ajuda" data-position="left" onclick="ExibeAjuda()" style="cursor:pointer; margin-top: 10px; margin-right: 10px">help</i>
         <div class="areaDados">
-            <input type="hidden" id="tipoVariavel" value="@ViewBag.Tipo"/>
+            <input type="hidden" id="tipoVariavel" value="@ViewBag.Tipo" />
             <div class="row">
                 <p>
                     <label>
-                        <input type="radio" name="radioTipo" value="A"/>
+                        <input type="radio" name="radioTipo" value="A" />
                         <span>Amostra</span>
                     </label>
                     <label>
-                        <input type="radio" name="radioTipo" value="P"/>
+                        <input type="radio" name="radioTipo" value="P" />
                         <span>Populacao</span>
                     </label>
                 </p>
@@ -44,125 +40,112 @@
     </form>
 </div>
 
-<div class="row center" style="padding: 0 15px">
-    <div id="resultados" class="col s8 offset-s2 areaDados" style="display: none;"></div>
+<div id="resultados" class="row center" style="padding: 0 15px">
+    <div id="roladicionado" class="row col s2"></div>
+    <div id="frequenciaadcionada" class="row col s5"></div>
+    <div id="graficoadicionado" class="row col s5"></div>
+    <div id="mediamodamedianaadicionada" class="row col s5"></div>
 </div>
 
 @section Scripts{
-    <script type="text/javascript">
-        var primeiraVez = true;
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#slide-out").css("transform", "translateX(-105%)");
+        $("#retornar").hide();
+    });
 
-        $("input[name=radioTipo]").change(function(){
-            $("#hiddenInputs").slideDown("fast"); 
+    var primeiraVez = true;
+    $("input[name=radioTipo]").change(function () {
+        $("#hiddenInputs").slideDown("fast");
 
-            if(primeiraVez){
-                ExibeAjuda();
-                primeiraVez = false;
-            }
+        if (primeiraVez) {
+            ExibeAjuda();
+            primeiraVez = false;
+        }
+    });
+
+    $("#varPesquisada, #divChips input")
+        .keyup(HabilitaDesabilita)
+        .change(HabilitaDesabilita)
+        .blur(HabilitaDesabilita);
+    $("#btnEnviaDados").click(function () {
+        $("#fomulario-dados").hide();
+        let dadosColetados = [],
+            frequencia = [];
+
+        M.Chips.getInstance($(".chips")).chipsData.forEach(function (item) {
+            dadosColetados.push(parseFloat(item.tag));
         });
 
-        $("#varPesquisada, #divChips input")
-            .keyup(HabilitaDesabilita)
-            .change(HabilitaDesabilita)
-            .blur(HabilitaDesabilita);
+        $.get("/Quantitativas/Rol", {
+            jsonDadosColetados: JSON.stringify(dadosColetados.sort(function (a, b) { return a - b }))
+        }).done(function (data) {
+            $("#roladicionado").append($("<div>", {
+                class: "col s12 areaDados",
+                html: [data]
+            }));
+        }).fail(erro);
 
-        $("#btnEnviaDados").click(function(){
-            let dadosColetados = [],
-                frequencia = [];
+        dadosPGrafico = [];
+        if ('@ViewBag.Tipo' == "C") {
+            frequencia = calculaFrequenciasContinua(dadosColetados.sort(function (a, b) { return a - b }));
 
-            M.Chips.getInstance($(".chips")).chipsData.forEach(function(item){
-                dadosColetados.push(parseFloat(item.tag));
+            frequencia.forEach(function (dado) {
+                for (var i = 0; i < dado.Fr; i++)
+                    dadosPGrafico.push(dado.Var);
             });
-            
-            $(".rowAdicionada").remove();
-            
-            $.get("/Quantitativas/Rol",{
-                jsonDadosColetados: JSON.stringify(dadosColetados.sort(function(a, b){return a-b}))
-            }).done(function(data){
-                $("#resultados").parent().append($("<div>",{
-                    class: "row center rowAdicionada",
-                    html: [ $("<div>",{
-                            class: "col s8 offset-s2 areaDados",
-                            style: "padding: 15px 15px; margin-top: 20px;",
-                            html: [data]
-                        })]
-                }));
-            }).error(erro);
-            
-            dadosPGrafico = [];
-            if('@ViewBag.Tipo' == "C"){
-                frequencia = calculaFrequenciasContinua(dadosColetados.sort(function(a, b){return a-b}));
-
-                frequencia.forEach(function(dado){
-                    for(var i = 0; i < dado.Fr; i++)
-                        dadosPGrafico.push(dado.Var);
-                });
-                console.log(medidasEstatisticasContinua(dadosColetados.sort(function(a, b){return a-b}),"A"));
-            }
-            else{ 
-                frequencia = calculaFrequencias(dadosColetados.sort(function(a, b){return a-b})); 
-                dadosPGrafico = dadosColetados;
-            }
-            
-            $.get("/QualitativasQuantitativas/Tabela",{
-                jsonDadosColetados: JSON.stringify(frequencia)
-            }).done(function(data){
-                $("#resultados").parent().append($("<div>",{
-                    class: "row center rowAdicionada",
-                    html: [ $("<div>",{
-                            class: "col s8 offset-s2 areaDados",
-                            style: "padding: 15px 15px; margin-top: 20px;",
-                            html: [data]
-                        })]
-                }));
-            }).error(erro);
-
-            $.get("/Quantitativas/MediaModaMediana",{
-                jsonDadosColetados: JSON.stringify(dadosColetados),
-                amostra: $("input[name=radioTipo]:checked").val()
-            }).success(function(data){
-                $("#resultados").parent().append($("<div>",{
-                    class: "row center rowAdicionada",
-                    html: [ $("<div>",{
-                            class: "col s8 offset-s2 areaDados",
-                            style: "padding: 15px 15px; margin-top: 20px;",
-                            html: [data]
-                        })]
-                }));
-            }).error(function(xhr){
-                M.Toast.dismissAll();  
-                M.toast({ html: xhr.responseText });
-            });
-
-            $.get("/Quantitativas/Grafico",{
-                jsonDadosColetados: JSON.stringify(dadosPGrafico.sort(function(a, b){return a-b}))
-            }).success(function(data){
-                $("#resultados").parent().append($("<div>",{
-                    class: "row center rowAdicionada",
-                    html: [ $("<div>",{
-                            class: "col s8 offset-s2 areaDados",
-                            style: "padding: 15px 15px; margin-top: 20px;",
-                            html: [$("<h4>",{
-                                        style: "text-align: left",
-                                        html: ["Gráfico"]
-                                    }),
-                                    data]
-                        })]
-                }));
-            }).error(erro);
-        });
-
-        function ExibeAjuda(){
-            M.Toast.dismissAll();
-            M.toast({ html: "Use a tecla 'Enter' para inserir os dados" });
-            M.toast({ html: "Use pontos ou vírgulas para numeros decimais" });
+            console.log(medidasEstatisticasContinua(dadosColetados.sort(function (a, b) { return a - b }), "A"));
+        }
+        else {
+            frequencia = calculaFrequencias(dadosColetados.sort(function (a, b) { return a - b }));
+            dadosPGrafico = dadosColetados;
         }
 
-        function HabilitaDesabilita(){
-            if($("#varPesquisada").val() && $("#divChips .chip").length > 0)
-                $("#btnEnviaDados").removeClass("disabled");
-            else
-                $("#btnEnviaDados").addClass("disabled");    
-        }
-    </script>
+        $.get("/QualitativasQuantitativas/Tabela", {
+            jsonDadosColetados: JSON.stringify(frequencia)
+        }).done(function (data) {
+            $("#frequenciaadcionada").append($("<div>", {
+                class: "col s12 areaDados",
+                html: [data]
+            }));
+        }).fail(erro);
+
+        $.get("/Quantitativas/MediaModaMediana", {
+            jsonDadosColetados: JSON.stringify(dadosColetados),
+            amostra: $("input[name=radioTipo]:checked").val()
+        }).done(function (data) {
+            $("#mediamodamedianaadicionada").append($("<div>", {
+                class: "col s12 areaDados",
+                html: [data]
+            }));
+        }).fail(erro);
+
+        $.get("/Quantitativas/Grafico", {
+            jsonDadosColetados: JSON.stringify(dadosPGrafico.sort(function (a, b) { return a - b }))
+        }).done(function (data) {
+            $("#graficoadicionado").append($("<div>", {
+                class: "col s12 areaDados",
+                html: [$("<h4>", {
+                    style: "text-align: left",
+                    html: ["Gráfico"]
+                }), data]
+            }));
+        }).fail(erro);
+        $("#resultados").show();
+        $("#retornar").show();
+    });
+
+    function ExibeAjuda() {
+        M.Toast.dismissAll();
+        M.toast({ html: "Use a tecla 'Enter' para inserir os dados" });
+        M.toast({ html: "Use pontos ou vírgulas para numeros decimais" });
+    }
+
+    function HabilitaDesabilita() {
+        if ($("#varPesquisada").val() && $("#divChips .chip").length > 0)
+            $("#btnEnviaDados").removeClass("disabled");
+        else
+            $("#btnEnviaDados").addClass("disabled");
+    }
+</script> 
 }
