Fazendo algumas melhorias no código e adicionando view e action para distribuição binomial

--- a/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Grafico.cshtml
@@ -1,5 +1,5 @@
 <canvas id="graficoPizza" class="grafico"></canvas>
 
 <script>
-    montaGrafico("doughnut", JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"')), "graficoPizza", $("#varPesquisada").val());
+    montaGrafico("pie", JSON.parse('@ViewBag.Dados'.replace(/&quot;/g,'"')), "graficoPizza", $("#varPesquisada").val());
 </script>
