--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -1,87 +1,88 @@
 <div id="divLoad" class="center">
-  <div class="preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div>
-      <div class="gap-patch">
-        <div class="circle"></div>
-      </div>
-      <div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
+    <div class="preloader-wrapper big active">
+        <div class="spinner-layer spinner-blue">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+                <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+        <div class="spinner-layer spinner-red">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div><div class="gap-patch">
+                <div class="circle"></div>
+            </div><div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+        <div class="spinner-layer spinner-yellow">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div><div class="gap-patch">
+                <div class="circle"></div>
+            </div><div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+        <div class="spinner-layer spinner-green">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div><div class="gap-patch">
+                <div class="circle"></div>
+            </div><div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
     </div>
-    <div class="spinner-layer spinner-red">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-    <div class="spinner-layer spinner-yellow">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-    <div class="spinner-layer spinner-green">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
 </div>
 
 <ul id="slide-out" class="sidenav blue-grey darken-3">
-  <li class="no-padding">
-    <ul class="collapsible collapsible-accordion">
-      <li>
-      <a class="collapsible-header white-text">Técnicas de Amostragem<i class="material-icons right white-text">zoom_in</i></a>
-      <div class="collapsible-body blue-grey darken-1">
-        <ul>
-          <li><a href="#!" class="white-text">Aleatória</a></li>
-          <li><a href="#!" class="white-text">Uniforme</a></li>
-          <li><a href="#!" class="white-text">Proporcional</a></li>
-          <li><a href="#!" class="white-text">Sistemática</a></li>
+    <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+            <li>
+                <a class="collapsible-header white-text">Técnicas de Amostragem<i class="material-icons right white-text">zoom_in</i></a>
+                <div class="collapsible-body blue-grey darken-1">
+                    <ul>
+                        <li><a href="#!" class="white-text">Aleatória</a></li>
+                        <li><a href="#!" class="white-text">Uniforme</a></li>
+                        <li><a href="#!" class="white-text">Proporcional</a></li>
+                        <li><a href="#!" class="white-text">Sistemática</a></li>
+                    </ul>
+                </div>
+            </li>
         </ul>
-      </div>
-      </li>
-    </ul>
-  </li>
-  <li class="no-padding">
-      <ul class="collapsible collapsible-accordion">
-      <li>
-        <a class="collapsible-header white-text">Variaveis Quantitativas<i class="material-icons right white-text">zoom_in</i></a>
-        <div class="collapsible-body blue-grey darken-1">
-          <ul>
-            <li><a id="varDiscreta" href="#Discreta" class="white-text">Discreta</a></li>
-            <li><a id="varContinua" href="#Continua" class="white-text">Contínua</a></li>
-          </ul>
-        </div>
-      </li>
-    </ul>
-  </li>
-  <li><a href="#!" id="varQualitativa" class="white-text">Variaveis Qualitativas</a></li>
+    </li>
+    <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+            <li>
+                <a class="collapsible-header white-text">Variaveis Quantitativas<i class="material-icons right white-text">zoom_in</i></a>
+                <div class="collapsible-body blue-grey darken-1">
+                    <ul>
+                        <li><a id="varDiscreta" href="#Discreta" class="white-text">Discreta</a></li>
+                        <li><a id="varContinua" href="#Continua" class="white-text">Contínua</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </li>
+    <li><a href="#!" id="distribuicaoBinomial" class="white-text">Distribuição Binomial</a></li>
+    <li><a href="#!" id="varQualitativa" class="white-text">Variaveis Qualitativas</a></li>
 </ul>
 <div class="botoes-navegacao">
-  <a href="#" data-target="slide-out" class="sidenav-trigger menu"><i class="material-icons">menu</i></a>
-  <a href="#" id="retornar" class="retorno" style="display:none;"><i class="material-icons small">keyboard_backspace</i></a>
+    <a href="#" data-target="slide-out" class="sidenav-trigger menu"><i class="material-icons">menu</i></a>
+    <a href="#" id="retornar" class="retorno" style="display:none;"><i class="material-icons small">keyboard_backspace</i></a>
 </div>
 <div id="corpoSite" class="height">
-  <div class="center">
-    <i class="large material-icons" style="color: #37474f; font-size: 40rem;">trending_up</i>
-  </div>
+    <div class="center">
+        <i class="large material-icons" style="color: #37474f; font-size: 40rem;">trending_up</i>
+    </div>
 </div>
 
 @section Scripts{
-  <script type="text/javascript" src="~/js/sideNav.js"></script>
+    <script type="text/javascript" src="~/js/sideNav.js"></script>
 }
