--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
@@ -48,104 +48,105 @@
 </div>
 
 @section Scripts{
-<script type="text/javascript">
-    $(document).ready(function () {
+    <script type="text/javascript">
         $("#slide-out").css("transform", "translateX(-105%)");
         $("#retornar").hide();
-    });
 
-    var primeiraVez = true;
-    $("input[name=radioTipo]").change(function () {
-        $("#hiddenInputs").slideDown("fast");
+        var primeiraVez = true;
 
-        if (primeiraVez) {
-            ExibeAjuda();
-            primeiraVez = false;
-        }
-    });
+        $("input[name=radioTipo]").change(function () {
+            $("#hiddenInputs").slideDown("fast");
 
-    $("#varPesquisada, #divChips input")
-        .keyup(HabilitaDesabilita)
-        .change(HabilitaDesabilita)
-        .blur(HabilitaDesabilita);
-    $("#btnEnviaDados").click(function () {
-        $("#fomulario-dados").hide();
-        let dadosColetados = [],
-            frequencia = [];
-
-        M.Chips.getInstance($(".chips")).chipsData.forEach(function (item) {
-            dadosColetados.push(parseFloat(item.tag));
+            if (primeiraVez) {
+                ExibeAjuda();
+                primeiraVez = false;
+            }
         });
 
-        $.get("/Quantitativas/Rol", {
-            jsonDadosColetados: JSON.stringify(dadosColetados.sort(function (a, b) { return a - b }))
-        }).done(function (data) {
-            $("#roladicionado").append($("<div>", {
-                class: "col s12 areaDados",
-                html: [data]
-            }));
-        }).fail(erro);
+        $("#varPesquisada, #divChips input")
+            .keyup(HabilitaDesabilita)
+            .change(HabilitaDesabilita)
+            .blur(HabilitaDesabilita);
 
-        dadosPGrafico = [];
-        if ('@ViewBag.Tipo' == "C") {
-            frequencia = calculaFrequenciasContinua(dadosColetados.sort(function (a, b) { return a - b }));
+        $("#btnEnviaDados").click(function () {
+            let dadosColetados = [],
+                frequencia;
 
-            frequencia.forEach(function (dado) {
-                for (var i = 0; i < dado.Fr; i++)
-                    dadosPGrafico.push(dado.Var);
+            $("#fomulario-dados").hide();
+
+            M.Chips.getInstance($(".chips")).chipsData.forEach(function (item) {
+                dadosColetados.push(parseFloat(item.tag));
             });
-            console.log(medidasEstatisticasContinua(dadosColetados.sort(function (a, b) { return a - b }), "A"));
+
+            $.get("/Quantitativas/Rol", {
+                jsonDadosColetados: JSON.stringify(dadosColetados.sort(function (a, b) { return a - b }))
+            }).done(function (data) {
+                $("#roladicionado").append($("<div>", {
+                    class: "col s12 areaDados",
+                    html: [data]
+                }));
+            }).fail(erro);
+
+            let dadosPGrafico = [];
+            if ('@ViewBag.Tipo' == "C") {
+                frequencia = calculaFrequenciasContinua(dadosColetados.sort(function (a, b) { return a - b }));
+
+                frequencia.forEach(function (dado) {
+                    for (let i = 0; i < dado.Fr; i++)
+                        dadosPGrafico.push(dado.Var);
+                });
+                console.log(medidasEstatisticasContinua(dadosColetados.sort(function (a, b) { return a - b }), "A"));
+            }
+            else {
+                frequencia = calculaFrequencias(dadosColetados.sort(function (a, b) { return a - b }));
+                dadosPGrafico = dadosColetados;
+            }
+
+            $.get("/QualitativasQuantitativas/Tabela", {
+                jsonDadosColetados: JSON.stringify(frequencia)
+            }).done(function (data) {
+                $("#frequenciaadcionada").append($("<div>", {
+                    class: "col s12 areaDados",
+                    html: [data]
+                }));
+            }).fail(erro);
+
+            $.get("/Quantitativas/MediaModaMediana", {
+                jsonDadosColetados: JSON.stringify(dadosColetados),
+                amostra: $("input[name=radioTipo]:checked").val()
+            }).done(function (data) {
+                $("#mediamodamedianaadicionada").append($("<div>", {
+                    class: "col s12 areaDados",
+                    html: [data]
+                }));
+            }).fail(erro);
+
+            $.get("/Quantitativas/Grafico", {
+                jsonDadosColetados: JSON.stringify(dadosPGrafico.sort(function (a, b) { return a - b }))
+            }).done(function (data) {
+                $("#graficoadicionado").append($("<div>", {
+                    class: "col s12 areaDados",
+                    html: [$("<h4>", {
+                        style: "text-align: left",
+                        html: ["Gráfico"]
+                    }), data]
+                }));
+                }).fail(erro);
+
+            $("#resultados, #retornar").show();
+        });
+
+        function ExibeAjuda() {
+            M.Toast.dismissAll();
+            M.toast({ html: "Use a tecla 'Enter' para inserir os dados" });
+            M.toast({ html: "Use pontos ou vírgulas para numeros decimais" });
         }
-        else {
-            frequencia = calculaFrequencias(dadosColetados.sort(function (a, b) { return a - b }));
-            dadosPGrafico = dadosColetados;
+
+        function HabilitaDesabilita() {
+            if ($("#varPesquisada").val() && $("#divChips .chip").length > 0)
+                $("#btnEnviaDados").removeClass("disabled");
+            else
+                $("#btnEnviaDados").addClass("disabled");
         }
-
-        $.get("/QualitativasQuantitativas/Tabela", {
-            jsonDadosColetados: JSON.stringify(frequencia)
-        }).done(function (data) {
-            $("#frequenciaadcionada").append($("<div>", {
-                class: "col s12 areaDados",
-                html: [data]
-            }));
-        }).fail(erro);
-
-        $.get("/Quantitativas/MediaModaMediana", {
-            jsonDadosColetados: JSON.stringify(dadosColetados),
-            amostra: $("input[name=radioTipo]:checked").val()
-        }).done(function (data) {
-            $("#mediamodamedianaadicionada").append($("<div>", {
-                class: "col s12 areaDados",
-                html: [data]
-            }));
-        }).fail(erro);
-
-        $.get("/Quantitativas/Grafico", {
-            jsonDadosColetados: JSON.stringify(dadosPGrafico.sort(function (a, b) { return a - b }))
-        }).done(function (data) {
-            $("#graficoadicionado").append($("<div>", {
-                class: "col s12 areaDados",
-                html: [$("<h4>", {
-                    style: "text-align: left",
-                    html: ["Gráfico"]
-                }), data]
-            }));
-        }).fail(erro);
-        $("#resultados").show();
-        $("#retornar").show();
-    });
-
-    function ExibeAjuda() {
-        M.Toast.dismissAll();
-        M.toast({ html: "Use a tecla 'Enter' para inserir os dados" });
-        M.toast({ html: "Use pontos ou vírgulas para numeros decimais" });
-    }
-
-    function HabilitaDesabilita() {
-        if ($("#varPesquisada").val() && $("#divChips .chip").length > 0)
-            $("#btnEnviaDados").removeClass("disabled");
-        else
-            $("#btnEnviaDados").addClass("disabled");
-    }
-</script> 
+    </script>
 }
